<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/dCounter"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView android:id="@+id/mCounter"
        android:text="@string/mcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dCounter"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/fCounter"
        android:text="@string/fcounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mCounter"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/sCounter"
        android:text="@string/scounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fCounter"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fButton"
        android:id="@+id/fButton"
        android:onClick="levelFlour"
        android:layout_below="@+id/sCounter"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sButton"
        android:id="@+id/sButton"
        android:onClick="levelSugar"
        android:layout_below="@+id/fButton"
        android:layout_alignLeft="@+id/fButton"
        android:layout_alignStart="@+id/fButton" />


</RelativeLayout>
